# lectrace

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  publish.yml
docs/: api-reference.md  configuration.md  custom-types.md  deploying.md  directives.md  getting-started.md  index.md  keyboard-shortcuts.md  rendering-api.md
frontend/: App.tsx  eslint.config.js  index.css  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/components/: TraceApp.tsx  TraceBrowser.tsx  icons.tsx
frontend/components/TraceViewer/: EnvPanel.js  EnvPanel.tsx  LinesPanel.js  LinesPanel.tsx  MobileBottomNav.tsx  NavigationBar.js  NavigationBar.tsx  index.js  index.tsx
frontend/components/renderers/: ExternalLinkCard.js  ExternalLinkCard.tsx  MarkdownView.js  MarkdownView.tsx  PlotView.js  PlotView.tsx  TensorView.js  TensorView.tsx  ValueRenderer.js  ValueRenderer.tsx
frontend/hooks/: useDrag.js  useDrag.ts  useKeyboard.js  useKeyboard.ts  useNavigation.js  useNavigation.ts  useSwipe.ts  useTrace.js  useTrace.ts
frontend/types/: trace.ts
frontend/utils/: format.js  format.ts  navigation.ts
lectrace/: __init__.py  _init.py  arxiv.py  builder.py  cli.py  directives.py  files.py  reference.py  renderings.py  serializer.py  server.py  tracer.py
lectrace/_static/: index.html
lectrace/_static/assets/: index-6_kgxR4r.js  index-BTEqfwkt.js  (+27 more)
lectrace/_templates/: docs.yml  lectrace.yml
scripts/: build_frontend.sh
tests/: test_directives.py  test_reference.py  test_serializer.py  test_tracer.py
